# waypoint_generator

./: CMakeLists.txt  LICENSE  README.md  package.xml
scripts/: waypoint_generator.py  waypoints.yaml
